2007-08-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/equipmentwindow.cpp, data/graphics/gui/Makefile.am,
	data/graphics/images/EquipBackground.png: Moved equipment background to
	the gui directory. Changed name to lowercase only.
	* src/localplayer.cpp, src/equipment.h, src/equipment.cpp: Ensured that
	equipment is cleared at the same time as the inventory.
	* src/net/beinghandler.cpp: Fixed position of the cleaning bit for
	looks, so that it actually fits into network data.

2007-08-08  Josh Langley  <joshlangley[at]optusnet.com.au>

	* src/equipment.h, src/gui/equipmentwindow.cpp, src/gui/equipmentwindow.h,
	src/localplayer.cpp, src/net/gameserver/player.cpp,
	src/net/gameserver/player.h, data/graphics/images/EquipBackground.png:
	Re-designed equipment window, un-equip created.

2007-08-07  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* po/Makevars, src/main.cpp: Replaced PACKAGE by tmw to	reduce
	preprocessing hell. Set gettext charset to utf8.
	* src/gui/menuwindow.cpp, src/gui/connection.cpp, src/gui/register.cpp,
	src/gui/equipmentwindow.cpp, src/gui/quitdialog.cpp, src/gui/login.cpp,
	src/gui/item_amount.cpp, src/gui/npclistdialog.cpp, src/gui/setup.cpp,
	src/gui/char_select.cpp, src/gui/setup_audio.cpp, src/gui/npc_text.cpp,
	src/gui/setup_video.cpp, src/gui/ministatus.cpp, src/gui/ok_dialog.cpp,
	src/gui/confirm_dialog.cpp, src/gui/setup_joystick.cpp,
	src/gui/serverdialog.cpp, src/gui/minimap.cpp, src/gui/popupmenu.cpp:
	Marked as translatable.
	* src/gui/trade.cpp, src/gui/equipmentwindow.cpp, src/gui/window.cpp,
	src/gui/inventorywindow.h, src/gui/chat.cpp, src/gui/debugwindow.cpp,
	src/gui/skill.cpp, src/gui/help.cpp, src/gui/inventorywindow.cpp,
	src/gui/window.h, src/gui/status.cpp, src/gui/popupmenu.cpp,
	src/gui/minimap.cpp: Fixed window dimensions not being restored at
	start time. Cleaned resizing notification. Improved access control on
	window members.