@@ -1,3 +1,7 @@
+2007-08-09  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
+
+	* po/POTFILES.in: Updated list of translatable source files.
+
 2007-08-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
 
 	* src/gui/equipmentwindow.cpp, data/graphics/gui/Makefile.am,
